8131
I would suggest to go for this to tighten up the availability of {{asScala}}:

{code}
scala> import javafx.scene._, shape._import javafx.scene._
import shape._

scala> implicit class RichJavaFXBuilder[B[X <: B[X]] <: NodeBuilder[_]](val _builder: B[_]) {
     |   type B1 = X forSome { type X <: B[X] }
     |   def asScala: B1 = _builder.asInstanceOf[B1]
     | }
warning: there were 2 feature warning(s); re-run with -feature for details
defined class RichJavaFXBuilder

scala> CircleBuilder.create().asScala.centerX(0).centerX(0).build()
res3: javafx.scene.shape.Circle = Circle@2becc08c

scala> List(1).asScala
<console>:20: error: value asScala is not a member of List[Int]
              List(1).asScala
                      ^
{code}
